Bugfix: Fixed line wrapping of labels/textboxes when positioned out of screen

--- a/share/userfiles/templates/default.css
+++ b/share/userfiles/templates/default.css
@@ -111,6 +111,7 @@ a.linelink {
 	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
 	font-size: 11px;
 	padding: 2px;
+	white-space:nowrap;
 }
 
 /* labels for the objects on the maps */
@@ -121,6 +122,7 @@ a.linelink {
 	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
 	font-size: 11px;
 	padding: 2px;
+	white-space:nowrap;
 }
 
 /* Style on info pages (index.php?info, index.php) */
